tests/__snapshots__/validation-toAcceptProps-stderr.snap.txt
Error: An argument or type argument must be provided.

  3 | describe("argument for 'source'", () => {
  4 |   test("must be provided", () => {
  5 |     expect().type.toAcceptProps({ test: false });
    |     ~~~~~~
  6 |   });
  7 | 
  8 |   test("must be of a function or class type", () => {

      at ./__typetests__/toAcceptProps.tst.tsx:5:5

Error: The argument must be of a function or class type.

   7 | 
   8 |   test("must be of a function or class type", () => {
   9 |     expect({ a: "sample" }).type.toAcceptProps({ test: false });
     |            ~~~~~~~~~~~~~~~
  10 |   });
  11 | });
  12 | 

       at ./__typetests__/toAcceptProps.tst.tsx:9:12

Error: The type argument must be of a function or class type.

  13 | describe("type argument for 'source'", () => {
  14 |   test("must be of a function or class type", () => {
  15 |     expect<{ a: string }>().type.not.toAcceptProps({});
     |            ~~~~~~~~~~~~~
  16 |   });
  17 | });
  18 | 

       at ./__typetests__/toAcceptProps.tst.tsx:15:12

Error: An argument or type argument must be provided.

  20 |   test("must be provided", () => {
  21 |     // @ts-expect-error!
  22 |     expect(() => <>{"test"}</>).type.toAcceptProps();
     |                                      ~~~~~~~~~~~~~
  23 |   });
  24 | 
  25 |   test("must be an object literal", () => {

       at ./__typetests__/toAcceptProps.tst.tsx:22:38

Error: The argument must be an object literal with key-value pairs.

  25 |   test("must be an object literal", () => {
  26 |     // @ts-expect-error!
  27 |     expect(() => <>{"test"}</>).type.toAcceptProps("nope");
     |                                                    ~~~~~~
  28 |   });
  29 | 
  30 |   test("must only contain key-value pairs", () => {

       at ./__typetests__/toAcceptProps.tst.tsx:27:52

Error: Each property must be a key-value pair or a spread element.

  31 |     const b = "no";
  32 |     const c = { c: true };
  33 |     expect(() => <>{"test"}</>).type.toAcceptProps({ a: "yes", b, ...c });
     |                                                                ~
  34 |   });
  35 | 
  36 |   test("property keys must be static identifiers or string literals", () => {

       at ./__typetests__/toAcceptProps.tst.tsx:33:64

Error: Property keys must be static identifiers or string literals.

  35 | 
  36 |   test("property keys must be static identifiers or string literals", () => {
  37 |     expect(() => <>{"test"}</>).type.toAcceptProps({ ["a"]: "nope" });
     |                                                      ~~~~~
  38 |   });
  39 | });
  40 | 

       at ./__typetests__/toAcceptProps.tst.tsx:37:54

